# BatailleSpatiale

./: .gitignore  CMakeLists.txt  Doxyfile  DoxyfileClient  LICENSE  README.md  build.xml
cmake/: ressources.cmake  sfml.cmake  source.cmake
cmake/modules/: FindSFML.cmake
doc/: avancement images vaisseaux.ods
doc/client/: header.html  notes.txt
doc/client/html/design/: doxygen.css  font.css  style.css
doc/client/uml/: avancement.ods
doc/client/uml/Patrick/: Patrick.uxf
doc/client/uml/Paul/: Paulette.uxf  Pauline.uxf  Paulo.uxf
doc/client/uml/Philippe/: Philippe.uxf
doc/client/uml/Pierre/: Pierre.uxf
doc/client/uml/Stories/: Stories.uxf
doc/rapport_reunion/: rapport_08_01_14  rapport_23_01_14
doc/serveur/: Bataille.uxf  CompteRendu24_10.odt  Diagramme_Cas_Utilisation.mlo  Rapport davancement 03_11_13.ods
ressources/: ressources.toc  ressources.txt
ressources/musiques/: Clearness.ogg.sfk
src/: Makefile  enums.hpp  global.hpp  main.cpp  structs.hpp  utiles.hpp
src/Doxygen/: Doxyfile
src/Integration/: Batiment.cpp  Batiment.hpp  TypeVaisseau.hpp  Vaisseau.cpp  Vaisseau.hpp
src/client/: Cellule.cpp  Cellule.hpp  DetailEvenement.hpp  Evenement.cpp  Evenement.hpp  Jeu.cpp  Jeu.hpp  Joueur.cpp  Joueur.hpp  Plateau.cpp  Plateau.hpp  Position.cpp  Position.hpp  main.cpp  mainClient.cpp  makefile
src/client/Vue/: Vue.cpp  Vue.hpp  VueGraphique.cpp  VueGraphique.hpp
src/client/Vue/Affichage/: Affichage.cpp  Affichage.hpp
src/client/Vue/Gestionnaire/: Gestionnaire.cpp  Gestionnaire.hpp
src/client/controleur/: Controleur.cpp  Controleur.hpp
src/client/modele/: DetailBatiment.hpp  DetailEvenement.hpp  DetailVaisseau.hpp  Joueur.cpp  Joueur.hpp  Plateau.cpp  Plateau.hpp  Position.hpp  Serveur.cpp  Serveur.hpp  TypeBatiment.hpp  TypeEvenement.hpp
src/client/modele/plateau/: Cellule.cpp  Cellule.hpp  CelluleBits.hpp  DetailEvenement.hpp  Evenement.cpp  Evenement.hpp
src/client/modele/structures/: Batiment.cpp  Batiment.hpp  DetailBatiment.hpp  DetailVaisseau.hpp  Vaisseau.cpp  Vaisseau.hpp
src/client/plateau/: Cellule.cpp  Cellule.hpp  DetailEvenement.hpp  Evenement.hpp  Plateau.cpp  Plateau.hpp
src/client/ressources/: Archive.cpp  Archive.hpp  GestionnaireSons.cpp  GestionnaireSons.hpp  Ressources.cpp  Ressources.hpp  Splash.cpp  Splash.hpp
src/client/structure/: Batiment.cpp  Batiment.hpp  DetailBatiment.hpp  DetailVaisseau.hpp  Vaisseau.hpp
src/client/structures/: Batiment.cpp  Batiment.hpp  DetailBatiment.hpp  DetailVaisseau.hpp  Vaisseau.cpp  Vaisseau.hpp
src/client/utile/: Log.cpp  Log.hpp  Notification.cpp  Notification.hpp  Utile.cpp  Utile.hpp
src/client/vue/: Affichage.cpp  Affichage.hpp  Scene.cpp  Scene.hpp  Scenes.hpp
src/client/vue/gui/: Animation.cpp  Animation.hpp  Bouton.cpp  Bouton.hpp  BoutonDeplacementCarte.cpp  BoutonDeplacementCarte.hpp  Element.cpp  Element.hpp  ElementClavier.cpp  ElementClavier.hpp  ElementSouris.cpp  ElementSouris.hpp  (+8 more)
src/client2/joueur/: Race.cpp  Race.hpp  joueur.cpp  joueur.hpp
src/commun/: ReseauClient.cpp  ReseauClient.hpp  ReseauGlobal.cpp  ReseauGlobal.hpp  ReseauServeur.cpp  ReseauServeur.hpp
src/commun/enum/: TypeBatiment.hpp  TypeCellule.hpp  TypeEvenement.hpp  TypePaquet.hpp  TypeVaisseau.hpp
src/commun/utile/: Position.cpp  Position.hpp
src/core/: NetworkClient.cpp  NetworkClient.hpp  NetworkGlobal.cpp  NetworkGlobal.hpp  NetworkServer.cpp  NetworkServer.hpp  ReseauClient.cpp  ReseauClient.hpp  ReseauGlobal.cpp  ReseauGlobal.hpp  ReseauServeur.cpp  ReseauServeur.hpp  network.cpp  network.hpp
src/core/enum/: TypeCellule.hpp  TypePaquet.hpp  TypeVaisseau.hpp
src/masterserveur/: ClientMaster.cpp  ClientMaster.hpp  Master.cpp  Master.hpp  ServeurMaster.cpp  ServeurMaster.hpp  mainMaster.cpp
src/old_client/: Joueur.cpp  Joueur.hpp  Plateau.cpp  Plateau.hpp  Position.cpp  Position.hpp  mainClient.cpp
src/old_client/plateau/: Cellule.cpp  Cellule.hpp  Evenement.cpp
src/old_client/structure/: DetailBatiment.hpp  Vaisseau.cpp
src/serveur/: mainServeur.cpp  mainServeur.hpp  sv_joueur.cpp  sv_joueur.hpp  sv_main.cpp
src/serveur/joueurs/: Joueur.cpp  Joueur.hpp  JoueurServeur.cpp  JoueurServeur.hpp
src/serveur/plateau/: Cellule.cpp  Cellule.hpp  CelluleServeur.cpp  CelluleServeur.hpp  Noeud.cpp  Noeud.hpp  NoeudServeur.cpp  NoeudServeur.hpp  Plateau.cpp  Plateau.hpp  PlateauServeur.cpp  PlateauServeur.hpp  Point.cpp  Point.hpp  TypeCellule.hpp
src/serveur/structures/: Structure.cpp  Structure.hpp  TechnologieStructure.cpp  TechnologieStructure.hpp
src/serveur/test/: makefile
src/tests/network/: Makefile  network-client  network-client.cpp  network-players  network-players.cpp  network-test  network-test.cpp
src/tests/src/: testStructure.cpp
(+145 files in other folders)
